@@ -3,33 +3,35 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     java
-    id("org.springframework.boot") version "2.5.2"
+    id("org.springframework.boot") version "2.5.4"
     id("io.spring.dependency-management") version "1.0.11.RELEASE"
     id("com.github.ben-manes.versions") version "0.39.0"
-    kotlin("jvm") version "1.5.21"
-    kotlin("kapt") version "1.5.21"
-    kotlin("plugin.spring") version "1.5.21"
-    kotlin("plugin.jpa") version "1.5.21"
+    kotlin("jvm") version "1.5.30"
+    kotlin("kapt") version "1.5.30"
+    kotlin("plugin.spring") version "1.5.30"
+    kotlin("plugin.jpa") version "1.5.30"
 }
 
 object Versions {
     const val bouncycastle = "1.69"
     const val commonsio = "2.8.0"
     const val cbor = "0.01.02-FIREHOSE"
+    const val checkerFramework = "3.17.0"
     const val coroutines = "1.5.1"
+    const val errorprone = "2.9.0"
     const val googleTruth = "1.1.3"
-    const val jackson = "2.12.4"
+    const val jackson = "2.12.5"
     const val joda = "2.10.10"
     const val json = "20210307"
-    const val jsoup = "1.14.1"
+    const val jsoup = "1.14.2"
     const val junit = "5.7.2"
     const val kotlinxIo = "0.1.16"
-    const val liquibase = "4.4.1"
+    const val liquibase = "4.4.3"
     const val mockk = "1.12.0"
     const val moshi = "1.12.0"
     const val okhttp = "4.9.1"
     const val retrofit = "2.9.0"
-    const val springSecurity = "5.5.1"
+    const val springSecurity = "5.5.2"
     const val sshj = "0.31.0"
 }
 
@@ -41,6 +43,22 @@ java.targetCompatibility = JavaVersion.VERSION_16
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+kotlin {
+    kotlinDaemonJvmArgs = listOf(
+        "-Dfile.encoding=UTF-8",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+    )
 }
 
 dependencies {
@@ -75,8 +93,8 @@ dependencies {
 
     implementation("com.google.iot.cbor:cbor:${Versions.cbor}")
     implementation("org.json:json:${Versions.json}")
-    compileOnly("com.google.errorprone:error_prone_annotations:2.7.1")
-    compileOnly("org.checkerframework:checker-qual:3.16.0")
+    compileOnly("com.google.errorprone:error_prone_annotations:${Versions.errorprone}")
+    compileOnly("org.checkerframework:checker-qual:${Versions.checkerFramework}")
     compileOnly("com.google.code.findbugs:jsr305:3.0.2")
     implementation("com.muquit.libsodiumjna:libsodium-jna:1.1.0-IOG-SNAPSHOT")
     // implementation("com.squareup.jnagmp:jnagmp:3.0.0")
@@ -128,7 +146,6 @@ tasks.withType<KotlinCompile> {
     kotlinOptions {
         freeCompilerArgs = listOf(
             "-Xjsr305=strict",
-            "-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi",
             "-Xopt-in=kotlin.RequiresOptIn",
         )
         jvmTarget = "16"
